--- a/waybar/style.css
+++ b/waybar/style.css
@@ -63,29 +63,6 @@ button:hover {
   background-color: #a37800;
 }
 
-#workspaces button {
-  padding: 0 7px;
-  background-color: transparent;
-  color: #ffffff;
-}
-
-#workspaces button:hover {
-  background: rgba(0, 0, 0, 0.2);
-}
-
-#workspaces button.focused {
-  background-color: #64727d;
-  box-shadow: inset 0 -3px #ffffff;
-}
-
-#workspaces button.active {
-  background-color: rgba(255, 255, 255, 0.3);
-}
-
-#workspaces button.urgent {
-  background-color: #eb4d4b;
-}
-
 #mode {
   background-color: #64727d;
   box-shadow: inset 0 -3px #ffffff;
@@ -115,6 +92,34 @@ button:hover {
 #window,
 #workspaces {
   margin: 0 4px;
+}
+
+/* #workspaces { */
+/* background: rgba(255, 255, 255, 0.5); */
+/*   padding: 5px 0; */
+/* } */
+
+#workspaces button {
+  padding: 0 10px;
+  background-color: transparent;
+  color: #ffffff;
+}
+
+#workspaces button:hover {
+  background: rgba(0, 0, 0, 0.2);
+}
+
+#workspaces button.focused {
+  background-color: #64727d;
+  box-shadow: inset 0 -3px #ffffff;
+}
+
+#workspaces button.active {
+  background-color: rgba(255, 255, 255, 0.3);
+}
+
+#workspaces button.urgent {
+  background-color: #eb4d4b;
 }
 
 /* #window label { */
