smoe edits on dontfiles

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -4,7 +4,7 @@
 }
 
 window#waybar {
-  background-color: rgba(43, 48, 59, 0.5);
+  background-color: rgba(43, 48, 59, 0.8);
   /* border-bottom: 3px solid rgba(100, 114, 125, 0.5); */
   color: #ffffff;
   transition-property: background-color;
@@ -24,6 +24,12 @@ window#waybar.hidden {
 }
 #custom-power:hover {
   background-color: #c0392b;
+}
+
+#custom-notification {
+  font-size: 18px;
+  padding: 0 8px;
+  background: rgba(250, 250, 250, 0.1);
 }
 
 /*
