--- a/waybar/style.css
+++ b/waybar/style.css
@@ -4,7 +4,7 @@
 }
 
 window#waybar {
-  background-color: rgba(43, 48, 59, 0.8);
+  background-color: rgba(43, 48, 59, 0.5);
   /* border-bottom: 3px solid rgba(100, 114, 125, 0.5); */
   color: #ffffff;
   transition-property: background-color;
@@ -22,14 +22,18 @@ window#waybar.hidden {
   padding-right: 12px;
   border-radius: 6px;
 }
+
 #custom-power:hover {
   background-color: #c0392b;
 }
 
 #custom-notification {
-  font-size: 18px;
-  padding: 0 8px;
-  background: rgba(250, 250, 250, 0.1);
+  background-color: rgba(43, 48, 59, 0.5);
+  font-size: 14px;
+  color: #ffffff;
+  padding: 0 10px;
+  padding-right: 12px;
+  border-radius: 6px;
 }
 
 /*
@@ -69,6 +73,29 @@ button:hover {
   background-color: #a37800;
 }
 
+#workspaces button {
+  padding: 0 7px;
+  background-color: transparent;
+  color: #ffffff;
+}
+
+#workspaces button:hover {
+  background: rgba(0, 0, 0, 0.2);
+}
+
+#workspaces button.focused {
+  background-color: #64727d;
+  box-shadow: inset 0 -3px #ffffff;
+}
+
+#workspaces button.active {
+  background-color: rgba(255, 255, 255, 0.3);
+}
+
+#workspaces button.urgent {
+  background-color: #eb4d4b;
+}
+
 #mode {
   background-color: #64727d;
   box-shadow: inset 0 -3px #ffffff;
@@ -98,34 +125,6 @@ button:hover {
 #window,
 #workspaces {
   margin: 0 4px;
-}
-
-/* #workspaces { */
-/* background: rgba(255, 255, 255, 0.5); */
-/*   padding: 5px 0; */
-/* } */
-
-#workspaces button {
-  padding: 0 10px;
-  background-color: transparent;
-  color: #ffffff;
-}
-
-#workspaces button:hover {
-  background: rgba(0, 0, 0, 0.2);
-}
-
-#workspaces button.focused {
-  background-color: #64727d;
-  box-shadow: inset 0 -3px #ffffff;
-}
-
-#workspaces button.active {
-  background-color: rgba(255, 255, 255, 0.3);
-}
-
-#workspaces button.urgent {
-  background-color: #eb4d4b;
 }
 
 /* #window label { */
@@ -305,12 +304,12 @@ label:focus {
 }
 
 #language {
-  background: #00b093;
-  color: #740864;
-  padding: 0 15px;
-  min-width: 19px;
+  background-color: rgba(250, 250, 250, 0.2);
+  padding: 0 5px;
+  min-width: 30px;
   border-radius: 10px 0 0 10px;
   font-size: 15px;
+  font-weight: 600;
 }
 
 #keyboard-state {
